[package]
name = "vectortile"
version = "0.2.2"
description = "Library for encoding Mapbox Vector Tiles"
authors = ["Kevin Stenerson <kstenerson@developers.wyyerd.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wyyerd/vectortile-rs"
documentation = "https://docs.rs/vectortile"
keywords = ["mapbox", "vector", "tile"]
categories = ["encoding"]

[lib]
name = "vectortile"

[dependencies]
postgres = "^0.15"
postgis = "^0.5"
protobuf = "^1.4"
